get around column named class
