# app/serializers/characters_serializer.rb
@@ -1,84 +1,0 @@
-class CharactersSerializer < ActiveModel::Serializer
-  attributes :guid,
-    :account, 
-    :name, 
-    :race, 
-    :class, 
-    :gender, 
-    :level, 
-    :xp, 
-    :money, 
-    :skin, 
-    :face, 
-    :hairStyle, 
-    :hairColor, 
-    :facialStyle, 
-    :bankSlots, 
-    :restState, 
-    :playerFlags, 
-    :position_x, 
-    :position_y, 
-    :position_z, 
-    :map, 
-    :instance_id, 
-    :instance_mode_mask, 
-    :orientation, 
-    :taximask, 
-    :online, 
-    :cinematic, 
-    :totaltime, 
-    :leveltime, 
-    :logout_time, 
-    :is_logout_resting, 
-    :rest_bonus, 
-    :resettalents_cost, 
-    :resettalents_time, 
-    :trans_x, 
-    :trans_y, 
-    :trans_z, 
-    :trans_o, 
-    :transguid, 
-    :extra_flags, 
-    :stable_slots, 
-    :at_login, 
-    :zone, 
-    :death_expire_time, 
-    :taxi_path, 
-    :arenaPoints, 
-    :totalHonorPoints, 
-    :todayHonorPoints, 
-    :yesterdayHonorPoints, 
-    :totalKills, 
-    :todayKills, 
-    :yesterdayKills, 
-    :chosenTitle, 
-    :knownCurrencies, 
-    :watchedFaction, 
-    :drunk, 
-    :health, 
-    :power1, 
-    :power2, 
-    :power3, 
-    :power4, 
-    :power5, 
-    :power6, 
-    :power7, 
-    :latency, 
-    :talentGroupsCount, 
-    :activeTalentGroup, 
-    :exploredZones, 
-    :equipmentCache, 
-    :ammoId, 
-    :knownTitles, 
-    :actionBars, 
-    :grantableLevels, 
-    :creation_date, 
-    :deleteInfos_Account, 
-    :deleteInfos_Name, 
-    :deleteDate
-
-  # def equipmentCache
-  #   self.equipmentCache
-  # end
-    # "equipmentCache": "12064 0 0 0 0 0 0 0 2586 0 0 0 0 0 11508 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 2361 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 ",
-end
