# swagger/v1/swagger.yaml
@@ -8,7 +8,7 @@ paths:
     post:
       summary: Login an account
       tags:
-      - Account
+      - acore_auth
       parameters: []
       responses:
         '200':
@@ -40,7 +40,7 @@ paths:
     post:
       summary: Register an account
       tags:
-      - Account
+      - acore_auth
       parameters: []
       responses:
         '201':
@@ -71,11 +71,46 @@ paths:
               - username
               - password
               - email
+  "/characters/all":
+    get:
+      summary: All Characters
+      tags:
+      - acore_characters
+      responses:
+        '200':
+          description: success
+          content: {}
+        '500':
+          description: error
+          content: {}
+  "/characters/get/":
+    post:
+      summary: Get a single Character
+      tags:
+      - acore_characters
+      parameters: []
+      responses:
+        '200':
+          description: success
+          content: {}
+        '500':
+          description: error
+          content: {}
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                guid:
+                  type: integer
+              required:
+              - guid
   "/realm/info":
     get:
       summary: Realm Info
       tags:
-      - Realm
+      - acore_auth
       responses:
         '200':
           description: success
@@ -92,7 +127,7 @@ paths:
     get:
       summary: Realm Uptime
       tags:
-      - Realm
+      - acore_auth
       responses:
         '200':
           description: success
@@ -104,7 +139,7 @@ paths:
     get:
       summary: Realm Characters
       tags:
-      - Realm
+      - acore_auth
       responses:
         '200':
           description: success
